PR/50395: Vicente Chaves de Melo: Loss of characters in serial port communication between gdb and kgdb_stub: switch to line break interrupt both when entering KGDB and also on shutdown so we can re-enter the debugger with BREAK.